src/main/java/com/example/demo/error/errorcode/ErrorCode.java
package com.example.demo.error.errorcode;

public interface ErrorCode {
    int     getCode();
    String  getMessage();
}
